--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     // FirebaseUI Storage
     implementation 'com.firebaseui:firebase-ui-storage:7.2.0'
-
+    //Item de pesquisa
+    implementation 'com.miguelcatalan:materialsearchview:1.4.0'
 }
 apply plugin: 'com.google.gms.google-services'
