1- Area inicial para criação de grupos adicionada ( area esta que serve para selecionar usuarios que participaram do grupo) , essa area utiliza-se de 2 recylcer view um vertical e outro horizontal.
Há fazer: Ajuste na toolbar nesta area principal , adicionando contador de membros selecioados para participar do grupo, logo abaixo do tiulo do toolbar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".GrupoActivity"
+            android:label="@string/title_activity_grupo"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
             android:name=".ChatActivity"
             android:label="@string/title_activity_chat"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".MainActivity">
-        </activity>
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".ConfiguracoesActivity"
             android:parentActivityName=".MainActivity" />
