1 - finalização da interface de grupos 2 - finalização da criação de grupos 3 - listagem de grupos existente na tela principal 4 - adicionando evendo de click para abrir chat do Grupo
Há fazer: Listagem de mensagens no chat do grupo. Por exemplo : "Ultima mensagem"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:name=".CadastroGrupoActivity2"
             android:label="@string/title_activity_cadastro_grupo2"
             android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".GrupoActivity">
+            android:parentActivityName=".MainActivity">
         </activity>
         <activity
             android:name=".GrupoActivity"
